Bug: fix responsive on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@
   }
   
   .click-metrics {
-    max-height: 400px;
+    max-height: 300px;
     overflow-y: hidden;
     scroll-behavior: smooth;
     overflow-y: scroll;
